--- a/wiki/bg/Interface.html
+++ b/wiki/bg/Interface.html
@@ -8,7 +8,7 @@
 <li><a href="../pl/Interface.html" class="mw-pt-progress mw-pt-progress--complete" title="Interfejs u&#380;ytkownika (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Interface.html" class="mw-pt-progress mw-pt-progress--low" title="Interface (5% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../cs/Interface.html" class="mw-pt-progress mw-pt-progress--low" title="U&#382;ivatelsk&eacute; rozhran&iacute; (14% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
 <li><a href="../ru/Interface.html" class="mw-pt-progress mw-pt-progress--med" title="&#1048;&#1085;&#1090;&#1077;&#1088;&#1092;&#1077;&#1081;&#1089; (24% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../zh-cn/Interface.html" class="mw-pt-progress mw-pt-progress--med" title="&#30028;&#38754; (38% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../ja/Interface.html" class="mw-pt-progress mw-pt-progress--low" title="&#12518;&#12540;&#12470;&#12540;&#12539;&#12452;&#12531;&#12479;&#12501;&#12455;&#12540;&#12473; (5% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
@@ -21,19 +21,19 @@
 </p><p><span typeof="mw:File"><a href="../index.php?title=FreeCAD_interface_base_divisions.svg&amp;filetimestamp=20200314201207&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_interface_base_divisions.svg" decoding="async" width="1024" height="563" class="mw-file-element" data-file-width="1807" data-file-height="994"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Standard interface in v0.19.</p>
-<p>The main window of the application can be roughly divided into 11 sections:
+<p>&#1054;&#1089;&#1085;&#1086;&#1074;&#1085;&#1080;&#1103;&#1090; &#1087;&#1088;&#1086;&#1079;&#1086;&#1088;&#1077;&#1094; &#1085;&#1072; &#1087;&#1088;&#1080;&#1083;&#1086;&#1078;&#1077;&#1085;&#1080;&#1077;&#1090;&#1086; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1073;&#1098;&#1076;&#1077; &#1075;&#1088;&#1091;&#1073;&#1086; &#1088;&#1072;&#1079;&#1076;&#1077;&#1083;&#1077;&#1085; &#1085;&#1072; 11 &#1089;&#1077;&#1082;&#1094;&#1080;&#1080;:
 </p>
-<ol><li>The <a href="../Main_view_area.html" class="mw-redirect" title="Main view area">main view area</a>, which can contain different tabbed windows</li>
-<li>The <a href="../3D_view.html" class="mw-redirect" title="3D view">3D view</a>, normally embedded in the <a href="../Main_view_area.html" class="mw-redirect" title="Main view area">main view area</a></li>
-<li>The upper part of the <a href="../Combo_view.html" class="mw-redirect" title="Combo view">combo view</a>, which includes the <a href="../Tree_view.html" class="mw-redirect" title="Tree view">tree view</a> and <a href="../Task_panel.html" class="mw-redirect" title="Task panel">task panel</a></li>
-<li>The lower part of the <a href="../Combo_view.html" class="mw-redirect" title="Combo view">combo view</a>, which includes the <a href="../Property_editor.html" class="mw-redirect" title="Property editor">property editor</a></li>
-<li>The <a href="../Selection_view.html" class="mw-redirect" title="Selection view">selection view</a></li>
-<li>The <a href="../Report_view.html" class="mw-redirect" title="Report view">report view</a></li>
-<li>The <a href="../Python_console.html" class="mw-redirect" title="Python console">Python console</a></li>
-<li>The <a href="../Status_bar.html" class="mw-redirect" title="Status bar">status bar</a></li>
-<li>The toolbar area, see the following information on the toolbars</li>
-<li>The <a href="../Std_Workbench.html" title="Std Workbench">Workbench selector</a>, which itself is a toolbar</li>
-<li>The <a href="../Standard_Menu.html" title="Standard Menu">standard menu</a></li></ol>
+<ol><li><a href="../Main_view_area.html" class="mw-redirect" title="Main view area">main view area</a>, &#1082;&#1086;&#1103;&#1090;&#1086; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1089;&#1098;&#1076;&#1098;&#1088;&#1078;&#1072;&#1090; &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080; &#1087;&#1088;&#1086;&#1079;&#1086;&#1088;&#1094;&#1080; &#1087;&#1086;&#1076;&#1089;&#1090;&#1088;&#1072;&#1085;&#1080;&#1094;&#1080;</li>
+<li><a href="../3D_view.html" class="mw-redirect" title="3D view">3D view</a>, &#1086;&#1073;&#1080;&#1082;&#1085;&#1086;&#1074;&#1077;&#1085;&#1086; &#1074;&#1075;&#1088;&#1072;&#1076;&#1077;&#1085;&#1080; &#1074; <a href="../Main_view_area.html" class="mw-redirect" title="Main view area">main view area</a></li>
+<li>&#1043;&#1086;&#1088;&#1085;&#1072;&#1090;&#1072; &#1095;&#1072;&#1089;&#1090; &#1085;&#1072;<a href="../Combo_view.html" class="mw-redirect" title="Combo view">combo view</a>, &#1082;&#1086;&#1081;&#1090;&#1086; &#1074;&#1082;&#1083;&#1102;&#1095;&#1074;&#1072; <a href="../Tree_view.html" class="mw-redirect" title="Tree view">tree view</a> &#1080; <a href="../Task_panel.html" class="mw-redirect" title="Task panel">task panel</a></li>
+<li>&#1044;&#1086;&#1083;&#1085;&#1072;&#1090;&#1072; &#1095;&#1072;&#1089;&#1090; &#1085;&#1072; <a href="../Combo_view.html" class="mw-redirect" title="Combo view">combo view</a>, &#1082;&#1086;&#1081;&#1090;&#1086; &#1074;&#1082;&#1083;&#1102;&#1095;&#1074;&#1072; <a href="../Property_editor.html" class="mw-redirect" title="Property editor">property editor</a></li>
+<li><a href="../Selection_view.html" class="mw-redirect" title="Selection view">selection view</a></li>
+<li><a href="../Report_view.html" class="mw-redirect" title="Report view">report view</a></li>
+<li><a href="../Python_console.html" class="mw-redirect" title="Python console">Python console</a></li>
+<li><a href="../Status_bar.html" class="mw-redirect" title="Status bar">status bar</a></li>
+<li>&#1047;&#1072; &#1086;&#1073;&#1083;&#1072;&#1089;&#1090;&#1090;&#1072; &#1085;&#1072; &#1083;&#1077;&#1085;&#1090;&#1080;&#1090;&#1077; &#1089; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080;, &#1074;&#1080;&#1078;&#1090;&#1077; &#1089;&#1083;&#1077;&#1076;&#1085;&#1072;&#1090;&#1072; &#1080;&#1085;&#1092;&#1086;&#1088;&#1084;&#1072;&#1094;&#1080;&#1103; &#1079;&#1072; &#1083;&#1077;&#1085;&#1090;&#1080;&#1090;&#1077; &#1089; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080;</li>
+<li><a href="../Std_Workbench.html" title="Std Workbench">Workbench selector</a>, &#1082;&#1086;&#1103;&#1090;&#1086; &#1089;&#1072;&#1084;&#1072; &#1087;&#1086; &#1089;&#1077;&#1073;&#1077; &#1089;&#1080; &#1077; &#1083;&#1077;&#1085;&#1090;&#1072; &#1089; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080;</li>
+<li><a href="../Standard_Menu.html" title="Standard Menu">standard menu</a></li></ol>
 <h2><span class="mw-headline" id="Components_of_the_interface">Components of the interface</span></h2>
 <p>Like many pieces of software, FreeCAD includes a standard menu bar, and then a series of toolbars and panels where the user tools are found.
 </p>
@@ -123,12 +123,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117083805
+Cached time: 20260117084655
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.068 seconds
-Real time usage: 0.100 seconds
+CPU time usage: 0.078 seconds
+Real time usage: 0.135 seconds
 Preprocessor visited node count: 349/1000000
 Post&#8208;expand include size: 11765/2097152 bytes
 Template argument size: 3370/2097152 bytes
@@ -139,18 +139,18 @@ Unstrip post&#8208;expand size: 2530/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   18.656      1 -total
- 25.47%    4.752      1 Template:Interface_navi/bg
- 24.31%    4.536      7 Template:StdMenu
- 21.14%    3.943      1 Template:Userdocnavi/bg
- 12.74%    2.377      2 Template:Navigation_menu_2
- 12.19%    2.275     20 Template:MenuCommand
-  9.61%    1.792      1 Template:Version
-  5.38%    1.004      1 Template:Caption
-  4.21%    0.786      1 Template:TOCright
+100.00%   28.175      1 -total
+ 30.69%    8.648      1 Template:Interface_navi/bg
+ 22.47%    6.332      1 Template:Userdocnavi/bg
+ 17.54%    4.941      7 Template:StdMenu
+ 15.43%    4.347      2 Template:Navigation_menu_2
+ 10.12%    2.851     20 Template:MenuCommand
+  7.85%    2.213      1 Template:TOCright
+  7.48%    2.107      1 Template:Version
+  7.36%    2.075      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260117083805 and revision id 1737802. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260117084654 and revision id 1739346. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
