--- a/wiki/bg/Interface.html
+++ b/wiki/bg/Interface.html
@@ -34,7 +34,9 @@
 <li>&#1047;&#1072; &#1086;&#1073;&#1083;&#1072;&#1089;&#1090;&#1090;&#1072; &#1085;&#1072; &#1083;&#1077;&#1085;&#1090;&#1080;&#1090;&#1077; &#1089; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080;, &#1074;&#1080;&#1078;&#1090;&#1077; &#1089;&#1083;&#1077;&#1076;&#1085;&#1072;&#1090;&#1072; &#1080;&#1085;&#1092;&#1086;&#1088;&#1084;&#1072;&#1094;&#1080;&#1103; &#1079;&#1072; &#1083;&#1077;&#1085;&#1090;&#1080;&#1090;&#1077; &#1089; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080;</li>
 <li><a href="../Std_Workbench.html" title="Std Workbench">Workbench selector</a>, &#1082;&#1086;&#1103;&#1090;&#1086; &#1089;&#1072;&#1084;&#1072; &#1087;&#1086; &#1089;&#1077;&#1073;&#1077; &#1089;&#1080; &#1077; &#1083;&#1077;&#1085;&#1090;&#1072; &#1089; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080;</li>
 <li><a href="../Standard_Menu.html" title="Standard Menu">standard menu</a></li></ol>
-<h2><span class="mw-headline" id="Components_of_the_interface">Components of the interface</span></h2>
+<p><span id="Components_of_the_interface"></span>
+</p>
+<h2><span id=".D0.9A.D0.BE.D0.BC.D0.BF.D0.BE.D0.BD.D0.B5.D0.BD.D1.82.D0.B8_.D0.BD.D0.B0_.D0.B8.D0.BD.D1.82.D0.B5.D1.80.D1.84.D0.B5.D0.B9.D1.81.D0.B0"></span><span class="mw-headline" id="&#1050;&#1086;&#1084;&#1087;&#1086;&#1085;&#1077;&#1085;&#1090;&#1080;_&#1085;&#1072;_&#1080;&#1085;&#1090;&#1077;&#1088;&#1092;&#1077;&#1081;&#1089;&#1072;">&#1050;&#1086;&#1084;&#1087;&#1086;&#1085;&#1077;&#1085;&#1090;&#1080; &#1085;&#1072; &#1080;&#1085;&#1090;&#1077;&#1088;&#1092;&#1077;&#1081;&#1089;&#1072;</span></h2>
 <p>Like many pieces of software, FreeCAD includes a standard menu bar, and then a series of toolbars and panels where the user tools are found.
 </p>
 <h3><span class="mw-headline" id="Menus">Menus</span></h3>
@@ -123,13 +125,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117084710
+Cached time: 20260117084727
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.076 seconds
-Real time usage: 0.106 seconds
-Preprocessor visited node count: 349/1000000
+CPU time usage: 0.105 seconds
+Real time usage: 0.216 seconds
+Preprocessor visited node count: 350/1000000
 Post&#8208;expand include size: 11765/2097152 bytes
 Template argument size: 3370/2097152 bytes
 Highest expansion depth: 5/100
@@ -139,18 +141,18 @@ Unstrip post&#8208;expand size: 2530/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   18.515      1 -total
- 26.81%    4.964      1 Template:Userdocnavi/bg
- 26.21%    4.852      1 Template:Interface_navi/bg
- 14.80%    2.741      7 Template:StdMenu
- 14.64%    2.711      2 Template:Navigation_menu_2
-  8.56%    1.585      1 Template:Caption
-  7.89%    1.460     20 Template:MenuCommand
-  6.47%    1.197      1 Template:TOCright
-  5.94%    1.100      1 Template:Version
+100.00%   60.581      1 -total
+ 30.77%   18.639      1 Template:Interface_navi/bg
+ 22.01%   13.337      1 Template:Userdocnavi/bg
+ 18.14%   10.987      2 Template:Navigation_menu_2
+ 17.00%   10.300      7 Template:StdMenu
+ 10.21%    6.184      1 Template:Version
+  8.81%    5.338      1 Template:Caption
+  8.59%    5.206     20 Template:MenuCommand
+  5.71%    3.462      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260117084710 and revision id 1739346. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260117084727 and revision id 1739349. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
