--- a/wiki/bg/Interface.html
+++ b/wiki/bg/Interface.html
@@ -24,7 +24,7 @@
 <p>&#1054;&#1089;&#1085;&#1086;&#1074;&#1085;&#1080;&#1103;&#1090; &#1087;&#1088;&#1086;&#1079;&#1086;&#1088;&#1077;&#1094; &#1085;&#1072; &#1087;&#1088;&#1080;&#1083;&#1086;&#1078;&#1077;&#1085;&#1080;&#1077;&#1090;&#1086; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1073;&#1098;&#1076;&#1077; &#1075;&#1088;&#1091;&#1073;&#1086; &#1088;&#1072;&#1079;&#1076;&#1077;&#1083;&#1077;&#1085; &#1085;&#1072; 11 &#1089;&#1077;&#1082;&#1094;&#1080;&#1080;:
 </p>
 <ol><li><a href="../Main_view_area.html" class="mw-redirect" title="Main view area">main view area</a>, &#1082;&#1086;&#1103;&#1090;&#1086; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1089;&#1098;&#1076;&#1098;&#1088;&#1078;&#1072;&#1090; &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080; &#1087;&#1088;&#1086;&#1079;&#1086;&#1088;&#1094;&#1080; &#1087;&#1086;&#1076;&#1089;&#1090;&#1088;&#1072;&#1085;&#1080;&#1094;&#1080;</li>
-<li><a href="../3D_view.html" class="mw-redirect" title="3D view">3D view</a>, &#1086;&#1073;&#1080;&#1082;&#1085;&#1086;&#1074;&#1077;&#1085;&#1086; &#1074;&#1075;&#1088;&#1072;&#1076;&#1077;&#1085;&#1080; &#1074; <a href="../Main_view_area.html" class="mw-redirect" title="Main view area">main view area</a></li>
+<li><a href="../3D_view.html" class="mw-redirect" title="3D view">3D view</a>, &#1086;&#1073;&#1080;&#1082;&#1085;&#1086;&#1074;&#1077;&#1085;&#1086; &#1074;&#1075;&#1088;&#1072;&#1076;&#1077;&#1085; &#1074; <a href="../Main_view_area.html" class="mw-redirect" title="Main view area">main view area</a></li>
 <li>&#1043;&#1086;&#1088;&#1085;&#1072;&#1090;&#1072; &#1095;&#1072;&#1089;&#1090; &#1085;&#1072; <a href="../Combo_view.html" class="mw-redirect" title="Combo view">combo view</a>, &#1082;&#1086;&#1103;&#1090;&#1086; &#1074;&#1082;&#1083;&#1102;&#1095;&#1074;&#1072; <a href="../Tree_view.html" class="mw-redirect" title="Tree view">tree view</a> &#1080; <a href="../Task_panel.html" class="mw-redirect" title="Task panel">task panel</a></li>
 <li>&#1044;&#1086;&#1083;&#1085;&#1072;&#1090;&#1072; &#1095;&#1072;&#1089;&#1090; &#1085;&#1072; <a href="../Combo_view.html" class="mw-redirect" title="Combo view">combo view</a>, &#1082;&#1086;&#1081;&#1090;&#1086; &#1074;&#1082;&#1083;&#1102;&#1095;&#1074;&#1072; <a href="../Property_editor.html" class="mw-redirect" title="Property editor">property editor</a></li>
 <li><a href="../Selection_view.html" class="mw-redirect" title="Selection view">selection view</a></li>
@@ -125,12 +125,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117085002
+Cached time: 20260117085038
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.078 seconds
-Real time usage: 0.132 seconds
+CPU time usage: 0.072 seconds
+Real time usage: 0.100 seconds
 Preprocessor visited node count: 350/1000000
 Post&#8208;expand include size: 11765/2097152 bytes
 Template argument size: 3370/2097152 bytes
@@ -141,18 +141,18 @@ Unstrip post&#8208;expand size: 2530/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.041      1 -total
- 25.71%    6.951      1 Template:Userdocnavi/bg
- 23.04%    6.229      1 Template:Interface_navi/bg
- 15.23%    4.117      7 Template:StdMenu
- 11.67%    3.156      1 Template:TOCright
- 11.32%    3.061      2 Template:Navigation_menu_2
-  9.66%    2.613      1 Template:Caption
-  7.12%    1.926     20 Template:MenuCommand
-  6.48%    1.752      1 Template:Version
+100.00%   20.137      1 -total
+ 25.26%    5.086      1 Template:Interface_navi/bg
+ 20.89%    4.206      7 Template:StdMenu
+ 17.42%    3.507      1 Template:Userdocnavi/bg
+ 13.62%    2.743      2 Template:Navigation_menu_2
+ 10.92%    2.199     20 Template:MenuCommand
+  9.07%    1.827      1 Template:Caption
+  8.55%    1.722      1 Template:Version
+  8.06%    1.624      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260117085002 and revision id 1739351. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260117085038 and revision id 1739353. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
