--- a/wiki/bg/Interface.html
+++ b/wiki/bg/Interface.html
@@ -32,7 +32,7 @@
 <li><a href="../Python_console.html" class="mw-redirect" title="Python console">Python console</a></li>
 <li><a href="../Status_bar.html" class="mw-redirect" title="Status bar">status bar</a></li>
 <li>&#1047;&#1072; &#1086;&#1073;&#1083;&#1072;&#1089;&#1090;&#1090;&#1072; &#1085;&#1072; &#1083;&#1077;&#1085;&#1090;&#1080;&#1090;&#1077; &#1089; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080;, &#1074;&#1080;&#1078;&#1090;&#1077; &#1089;&#1083;&#1077;&#1076;&#1085;&#1072;&#1090;&#1072; &#1080;&#1085;&#1092;&#1086;&#1088;&#1084;&#1072;&#1094;&#1080;&#1103; &#1079;&#1072; &#1083;&#1077;&#1085;&#1090;&#1080;&#1090;&#1077; &#1089; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080;</li>
-<li><a href="../Std_Workbench.html" title="Std Workbench">Workbench selector</a>, &#1082;&#1086;&#1103;&#1090;&#1086; &#1089;&#1072;&#1084;&#1072; &#1087;&#1086; &#1089;&#1077;&#1073;&#1077; &#1089;&#1080; &#1077; &#1083;&#1077;&#1085;&#1090;&#1072; &#1089; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080;</li>
+<li><a href="../Std_Workbench.html" title="Std Workbench">Workbench selector</a>, &#1082;&#1086;&#1081;&#1090;&#1086; &#1089;&#1072;&#1084; &#1087;&#1086; &#1089;&#1077;&#1073;&#1077; &#1089;&#1080; &#1077; &#1083;&#1077;&#1085;&#1090;&#1072; &#1089; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080;</li>
 <li><a href="../Standard_Menu.html" title="Standard Menu">standard menu</a></li></ol>
 <p><span id="Components_of_the_interface"></span>
 </p>
@@ -125,12 +125,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117085038
+Cached time: 20260117085129
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.072 seconds
-Real time usage: 0.100 seconds
+CPU time usage: 0.073 seconds
+Real time usage: 0.101 seconds
 Preprocessor visited node count: 350/1000000
 Post&#8208;expand include size: 11765/2097152 bytes
 Template argument size: 3370/2097152 bytes
@@ -141,18 +141,18 @@ Unstrip post&#8208;expand size: 2530/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   20.137      1 -total
- 25.26%    5.086      1 Template:Interface_navi/bg
- 20.89%    4.206      7 Template:StdMenu
- 17.42%    3.507      1 Template:Userdocnavi/bg
- 13.62%    2.743      2 Template:Navigation_menu_2
- 10.92%    2.199     20 Template:MenuCommand
-  9.07%    1.827      1 Template:Caption
-  8.55%    1.722      1 Template:Version
-  8.06%    1.624      1 Template:TOCright
+100.00%   17.493      1 -total
+ 26.76%    4.681      1 Template:Interface_navi/bg
+ 25.32%    4.430      1 Template:Userdocnavi/bg
+ 19.80%    3.464      2 Template:Navigation_menu_2
+ 15.30%    2.676      7 Template:StdMenu
+  9.14%    1.598      1 Template:TOCright
+  8.94%    1.565     20 Template:MenuCommand
+  7.77%    1.359      1 Template:Caption
+  6.05%    1.058      1 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260117085038 and revision id 1739353. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260117085129 and revision id 1739355. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
