--- a/wiki/bg/Interface.html
+++ b/wiki/bg/Interface.html
@@ -38,8 +38,9 @@
 </p>
 <h2><span id=".D0.9A.D0.BE.D0.BC.D0.BF.D0.BE.D0.BD.D0.B5.D0.BD.D1.82.D0.B8_.D0.BD.D0.B0_.D0.B8.D0.BD.D1.82.D0.B5.D1.80.D1.84.D0.B5.D0.B9.D1.81.D0.B0"></span><span class="mw-headline" id="&#1050;&#1086;&#1084;&#1087;&#1086;&#1085;&#1077;&#1085;&#1090;&#1080;_&#1085;&#1072;_&#1080;&#1085;&#1090;&#1077;&#1088;&#1092;&#1077;&#1081;&#1089;&#1072;">&#1050;&#1086;&#1084;&#1087;&#1086;&#1085;&#1077;&#1085;&#1090;&#1080; &#1085;&#1072; &#1080;&#1085;&#1090;&#1077;&#1088;&#1092;&#1077;&#1081;&#1089;&#1072;</span></h2>
 <p>&#1055;&#1086;&#1076;&#1086;&#1073;&#1085;&#1086; &#1085;&#1072; &#1084;&#1085;&#1086;&#1075;&#1086; &#1076;&#1088;&#1091;&#1075; &#1089;&#1086;&#1092;&#1090;&#1091;&#1077;&#1088;, FreeCAD &#1074;&#1082;&#1083;&#1102;&#1095;&#1074;&#1072; &#1089;&#1090;&#1072;&#1085;&#1076;&#1072;&#1088;&#1090;&#1085;&#1072; &#1083;&#1077;&#1085;&#1090;&#1072; &#1089; &#1084;&#1077;&#1085;&#1102;&#1090;&#1072; &#1080; &#1089;&#1083;&#1077;&#1076; &#1090;&#1086;&#1074;&#1072; &#1087;&#1086;&#1088;&#1077;&#1076;&#1080;&#1094;&#1072; &#1086;&#1090; &#1083;&#1077;&#1085;&#1090;&#1080; &#1089; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080; &#1080; &#1087;&#1072;&#1085;&#1077;&#1083;&#1080;, &#1082;&#1098;&#1076;&#1077;&#1090;&#1086; &#1089;&#1077; &#1085;&#1072;&#1084;&#1080;&#1088;&#1072;&#1090; &#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1080;&#1090;&#1077;&#1083;&#1089;&#1082;&#1080;&#1090;&#1077; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080;.
+</p><p><span id="Menus"></span>
 </p>
-<h3><span class="mw-headline" id="Menus">Menus</span></h3>
+<h3><span id=".D0.9C.D0.B5.D0.BD.D1.8E.D1.82.D0.B0"></span><span class="mw-headline" id="&#1052;&#1077;&#1085;&#1102;&#1090;&#1072;">&#1052;&#1077;&#1085;&#1102;&#1090;&#1072;</span></h3>
 <p>The <a href="../Standard_Menu.html" title="Standard Menu">standard menus</a> are: <span style="font-weight:bold; background: var(--background-color-neutral-subtle, #f8f9fa); border: 1px solid var(--border-color-base, #a2a9b1); padding: 0px 5px 1px 5px;"><a href="../Std_File_Menu.html" title="Std File Menu"><b>File</b></a></span>, <span style="font-weight:bold; background: var(--background-color-neutral-subtle, #f8f9fa); border: 1px solid var(--border-color-base, #a2a9b1); padding: 0px 5px 1px 5px;"><a href="../Std_Edit_Menu.html" title="Std Edit Menu"><b>Edit</b></a></span>, <span style="font-weight:bold; background: var(--background-color-neutral-subtle, #f8f9fa); border: 1px solid var(--border-color-base, #a2a9b1); padding: 0px 5px 1px 5px;"><a href="../Std_View_Menu.html" title="Std View Menu"><b>View</b></a></span>, <span style="font-weight:bold; background: var(--background-color-neutral-subtle, #f8f9fa); border: 1px solid var(--border-color-base, #a2a9b1); padding: 0px 5px 1px 5px;"><a href="../Std_Tools_Menu.html" title="Std Tools Menu"><b>Tools</b></a></span>, <span style="font-weight:bold; background: var(--background-color-neutral-subtle, #f8f9fa); border: 1px solid var(--border-color-base, #a2a9b1); padding: 0px 5px 1px 5px;"><a href="../Std_Macro_Menu.html" title="Std Macro Menu"><b>Macro</b></a></span>, <span style="font-weight:bold; background: var(--background-color-neutral-subtle, #f8f9fa); border: 1px solid var(--border-color-base, #a2a9b1); padding: 0px 5px 1px 5px;"><a href="../Std_Windows_Menu.html" title="Std Windows Menu"><b>Windows</b></a></span>, <span style="font-weight:bold; background: var(--background-color-neutral-subtle, #f8f9fa); border: 1px solid var(--border-color-base, #a2a9b1); padding: 0px 5px 1px 5px;"><a href="../Std_Help_Menu.html" title="Std Help Menu"><b>Help</b></a></span>.
 </p>
 <h3><span class="mw-headline" id="Toolbars">Toolbars</span></h3>
@@ -125,13 +126,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117085321
+Cached time: 20260117085339
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.078 seconds
-Real time usage: 0.122 seconds
-Preprocessor visited node count: 350/1000000
+CPU time usage: 0.088 seconds
+Real time usage: 0.351 seconds
+Preprocessor visited node count: 351/1000000
 Post&#8208;expand include size: 11765/2097152 bytes
 Template argument size: 3370/2097152 bytes
 Highest expansion depth: 5/100
@@ -141,18 +142,18 @@ Unstrip post&#8208;expand size: 2530/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.857      1 -total
- 27.07%    6.459      1 Template:Interface_navi/bg
- 26.72%    6.375      1 Template:Userdocnavi/bg
- 16.78%    4.003      7 Template:StdMenu
- 13.59%    3.242      2 Template:Navigation_menu_2
-  8.96%    2.138      1 Template:TOCright
-  7.96%    1.900     20 Template:MenuCommand
-  6.63%    1.582      1 Template:Version
-  6.59%    1.572      1 Template:Caption
+100.00%   62.132      1 -total
+ 21.79%   13.537      1 Template:Interface_navi/bg
+ 18.57%   11.536      7 Template:StdMenu
+ 18.19%   11.302      1 Template:Userdocnavi/bg
+ 15.64%    9.718      1 Template:Version
+  9.76%    6.066     20 Template:MenuCommand
+  9.71%    6.031      2 Template:Navigation_menu_2
+  9.14%    5.681      1 Template:Caption
+  7.80%    4.848      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260117085320 and revision id 1739357. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260117085338 and revision id 1739359. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
